<resources>
    <string name="app_name">Astropay</string>
    <string name="londres">Londres</string>
    <string name="buenos_aires">Buenos Aires</string>
    <string name="montevideo">Montevideo</string>
    <string name="munich">Munich</string>
    <string name="san_pablo">San Pablo</string>
    <string name="your_location">Tu posición</string>
    <string name="location_denied_message">¿Desea habilitar permisos de geoposición?</string>
    <string name="ok">Aceptar</string>
    <string name="location_not_available">La geoposición no está habilitada</string>
    <string name="loading_data">Obteniendo información...</string>
    <string name="current_temp">Temperatura actual</string>
</resources>